--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,6 +19,7 @@
 		<script>var webRoot='/tntxiaoa';</script>
 		<script src="/static/lib/jquery/jquery.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/vue/vue.js?version=20190724" charset="utf-8"></script>
+		<script src="/static/lib/echarts/echarts.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/jxiaui/js/jxiaui.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/jxiaui/0.1/dist/jxiaui.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/jxiaui/0.1/js/jxiaui.js?version=20190724" charset="utf-8"></script>
