--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,25 +1,12 @@
 <html>
 	<head>
 		<title>OA</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=Chrome">
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/oa_static/css/top.css">
-		<link rel="stylesheet" href="/static/lib/font-awesome/css/font-awesome.css">
-		<link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.css">
-		<link rel="stylesheet" href="/static/lib/jxiaui/0.1/css/jxiaui.css">
-		<link rel="stylesheet" href="/static/lib/jxiaui/0.1/css/jxiaui.datepicker.css">
-		<link rel="stylesheet" href="/static/lib/jxiaui/0.1/css/jxiaui.datagrid.css">
-		<link rel="stylesheet" href="/static/lib/jxiaui/0.1/css/jxiaui.dialog.css">
-		<link rel="stylesheet" href="/static/lib/jxiaui/0.1/css/jxiaui.tabs.css">
-		<link rel="stylesheet" href="/static/lib/jxiaui/0.1/css/jxiaui.combobox.css">
-		<link rel="stylesheet" href="/static/lib/main-layout-install/css/main-layout.css">
-		<link rel="stylesheet" href="css/cwface.css">
-		<link rel="stylesheet" href="css/tntxiaui/style.css">
-		<link rel="stylesheet" href="css/style.css">
-		<script>var webRoot='/tntxiaoa';</script>
+		<meta name="renderer" content="webkit">
+		<meta name="force-rendering" content="webkit"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<script src="/static/lib/jquery/jquery.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/vue/vue.js?version=20190724" charset="utf-8"></script>
-		<script src="/static/lib/echarts/echarts.js?version=20190724" charset="utf-8"></script>
+		<script src="/static/lib/echarts/echarts.js?version=20190724" charset="utf-8" async="true"></script>
 		<script src="/static/lib/jxiaui/js/jxiaui.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/jxiaui/0.1/dist/jxiaui.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/jxiaui/0.1/js/jxiaui.js?version=20190724" charset="utf-8"></script>
@@ -27,11 +14,7 @@
 		<script src="/tntxiaoa/js/lib/jxiaui/datepick.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/bootstrap/js/bootstrap.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/bootstrap-plus/js/bootstrap-utils.js?version=20190724" charset="utf-8"></script>
-		<script src="/static/lib/bootstrap-plus/js/bootstrap.grid.js?version=20190724" charset="utf-8"></script>
-		<script src="/oa_static/js/appinfo.js?version=20190724" charset="utf-8"></script>
-		<script src="/static/lib/module_route/module_route.js?version=20190724" charset="utf-8"></script>
-		<script src="/static/lib/main-layout-install/js/main-layout-install.js?version=20190724" charset="utf-8"></script>
-		<script src="/static/lib/js-install/js/js-install.js?version=20190724" charset="utf-8"></script>
+		<script src="/static/lib/web-install/js/web-install.js?version=20190809" charset="utf-8"></script>
 		<script src="/oa_static/js/index.js?version=20190724" charset="utf-8"></script>
 	</head>
 	<body>
