--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<script src="/static/lib/jquery/jquery.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/vue/vue.js?version=20190724" charset="utf-8"></script>
+		<script src="/static/lib/vue/vue-resource.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/echarts/echarts.js?version=20190724" charset="utf-8" async="true"></script>
 		<script src="/static/lib/jxiaui/js/jxiaui.js?version=20190724" charset="utf-8"></script>
 		<script src="/static/lib/jxiaui/0.1/dist/jxiaui.js?version=20190724" charset="utf-8"></script>
