--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,13 +1,1 @@
-<html>
-	<head>
-		<title>OA</title>
-		<meta name="renderer" content="webkit">
-		<meta name="force-rendering" content="webkit"/>
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-		<script src="/static/lib/web-install/js/web-install.js?version=20190809" charset="utf-8"></script>
-		<script src="/oa_static/js/index.js?version=20190926" charset="utf-8"></script>
-	</head>
-	<body>
-		
-	</body>
-</html>
+<script>window.location.href = "index.mvc";</script>
